--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 --- Info -----------------------------------------------------------------------
 What      : Pinto(TM) Image Format
-Version   : 1.0.02
+Version   : 1.0.03-wip
 Author    : Jeremiah Martell
 Copyright : (C) 2012-2014
 License   : 3-clause BSD
