--- a/README
+++ b/README
@@ -6,14 +6,15 @@ Copyright : (C) 2012-2014
 License   : 3-clause BSD
 Website   : http://GeekHorse.com
 
---- Description ----------------------------------------------------------------
-Pinto is a small image format that only uses printable ASCII characters in it's
+--- Summary --------------------------------------------------------------------
+Pinto is a tiny image format that only uses printable ASCII characters in its
 encoding.
 If you don't need the encoding to be text, the image can be made even smaller by
 running it through a standard compression program like gzip.
 
-It can compress images down to less than 15% of PNG.
+It can compress images to less than 15% of PNG.
 
+--- Details --------------------------------------------------------------------
 It supports encoding images:
   - 4096x4096 or smaller
   - 63 colors or less
